The input field was overlapping the border space a little bit because of its padding. border-box solves this sizing miscalculation.
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/packages/moonstone/SimpleIntegerPicker/SimpleIntegerPicker.less
+++ b/packages/moonstone/SimpleIntegerPicker/SimpleIntegerPicker.less
@@ -19,6 +19,7 @@
 		border-width: 0;
 		font-family: inherit;
 		font-size: inherit;
+		box-sizing: border-box;
 
 		&.hidden {
 			display: none;
